--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Polinas page</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h3>Title</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ipsa placeat quam ipsam dicta perspiciatis!</p>
+    </div>
 </body>
 </html>
